Closed Bug 572914 Opened 14 years ago Closed 14 years ago

nsIFrame::FinishAndStoreOverflow clips the overflow due to theme backgrounds when it shouldn't

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

References

Details

Attachments

(1 file)

Attached patch fixSplinter Review
nsIFrame::FinishAndStoreOverflow applies NS_STYLE_OVERFLOW_CLIP clipping to the overflow caused by theme backgrounds. It shouldn't, since theme backgrounds are not clipped by NS_STYLE_OVERFLOW_CLIP clipping.

This bug causes test failures with the patches in bug 564991.
Attachment #452140 - Flags: review?(dbaron)
Comment on attachment 452140 [details] [diff] [review]
fix

r=dbaron, though it might actually make more sense to swap the order of the two pieces that you moved above the inclusion of theme overflow
Attachment #452140 - Flags: review?(dbaron) → review+
Whiteboard: [needs landing]
http://hg.mozilla.org/mozilla-central/rev/1f2c11d95b7d
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: